--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <div class="Container">
-        <h1 class="question-text">Question:</h1>
+        <!-- <h1 class="question-text">Question:</h1> -->
+        <h1>This is a quiz! Press the start button for it to start.</h1>
         <input type="button" class="start-btn btn" value="Start">
-        <h1 class="submit-btn btn"></h1>
-        <h1 class="choice-1 btn"></h1>
-        <h1 class="choice-2 btn"></h1>
-        <h1 class="choice-3 btn"></h1>
-        <h1 class="choice-4 btn"></h1>
+        <!-- <button class="submit-btn btn">Submit</button> -->
+        <!-- <h1 class="submit-btn btn"></h1> -->
+        <!-- <h1 class="choice-0 btn"></h1> -->
+        <!-- <h1 class="choice-1 btn"></h1> -->
+        <!-- <h1 class="choice-2 btn"></h1> -->
+        <!-- <h1 class="choice-3 btn"></h1> -->
     </div>
     <script src="index.js"></script>
 </body>
