--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
 <body>
     <div class="Container">
         <!-- <h1 class="question-text">Question:</h1> -->
-        <h1>This is a quiz! Press the start button for it to start.</h1>
+        <h1>WW2 quiz!</h1>
+        <p>Press the start button to begin</p>
+        <img src="images/image-placeholder-title.jpg" alt="WW2 Image">
         <input type="button" class="start-btn btn" value="Start">
+        <!-- <input type="button" class="retry-btn btn" id="retry" value="Try Again?"> -->
         <!-- <button class="submit-btn btn">Submit</button> -->
         <!-- <h1 class="submit-btn btn"></h1> -->
         <!-- <h1 class="choice-0 btn"></h1> -->
