--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
         <!-- <input type="button" class="retry-btn btn" id="retry" value="Try Again?"> -->
         <!-- <button class="submit-btn btn">Submit</button> -->
         <!-- <h1 class="submit-btn btn"></h1> -->
-        <!-- <h1 class="choice-0 btn"></h1> -->
-        <!-- <h1 class="choice-1 btn"></h1> -->
-        <!-- <h1 class="choice-2 btn"></h1> -->
-        <!-- <h1 class="choice-3 btn"></h1> -->
+        <!-- <h1 class="choice-0 btn" id="choice-0"></h1> -->
+        <!-- <h1 class="choice-1 btn" id="choice-1"></h1> -->
+        <!-- <h1 class="choice-2 btn" id="choice-2"></h1> -->
+        <!-- <h1 class="choice-3 btn" id="choice-3"></h1> -->
     </div>
     <script src="index.js"></script>
 </body>
